--- a/afterLogin/afterLogin.html
+++ b/afterLogin/afterLogin.html
@@ -25,13 +25,13 @@
         loginName.innerText = `Welcome \n ${getLoginName}`;
         });
 
-        const logout = document.getElementById("logout-btn");
-        logout.addEventListener("click", ()=>{
-            localStorage.removeItem("email");
-            localStorage.removeItem("password");
-            localStorage.removeItem("setName");
-            localStorage.removeItem("text");
-        });
+        // const logout = document.getElementById("logout-btn");
+        // logout.addEventListener("click", ()=>{
+        //     localStorage.removeItem("email");
+        //     localStorage.removeItem("password");
+        //     localStorage.removeItem("setName");
+        //     localStorage.removeItem("text");
+        // });
     </script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
 </body>
