--- a/ranking/ranking.html
+++ b/ranking/ranking.html
@@ -29,7 +29,7 @@
         const highScore = JSON.parse(localStorage.getItem("highScore")) || [];
 
         highScoreList.innerHTML = highScore.map(score =>{
-            return `<li class="high-score"> &emsp; ${score.name} - ${score.score}</li>`;
+            return `<li class="high-score"> &emsp; ${score.name} &emsp;${score.score} points</li>`;
         }).join("");
     </script>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
