--- a/login/login.html
+++ b/login/login.html
@@ -30,7 +30,7 @@
         
         <div class="container">
             <a class="btn" href="../home/index.html">Home</a>
-            <a class="btn" href="../play/play.html">Play</a>
+            <a class="btn" href="../play/easy.html">Play</a>
             <a class="btn" href="../ranking/ranking.html">High Scores</a>
         </div>
     </main>
