--- a/play/easy.html
+++ b/play/easy.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="play.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-    <script src="play.js" defer></script>
+    <script src="easy.js" defer></script>
 </head>
 <body>
     <h1 class="level">Level : Easy</h1>
@@ -51,7 +51,7 @@
     </div>
     <div class="btn">
         <button class="button"><a href="../home/index.html">Home</a></button>
-        <button class="button"><a href="play.html">Start over</a></button>
+        <button class="button"><a href="easy.html">Start over</a></button>
         <button class="button"><a href="level.html">Change Level</a></button>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
