--- a/play/level.html
+++ b/play/level.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <h1>Level</h1>
-        <a class="btn" href="../play/play.html">Easy</a>
+        <a class="btn" href="../play/easy.html">Easy</a>
         <a class="btn" href="../play/medium.html">Medium</a>
         <a class="btn" href="../play/hard.html">Hard</a>
         <a class="btn" href="../home/index.html">Home</a>
